--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,181 @@
 html,
 body {
-  font-family: sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 200;
   margin: 0;
   padding: 0;
 }
 nav {
-  background-color: rgba(35, 144, 35, 0.8);
+  background-color: white;
   position: fixed;
   display: flex;
-  margin: none;
+  margin-top: 0;
+  margin-left: 3rem;
   align-items: center;
   width: 100vw;
-  height: 3rem;
+  height: 4rem;
   top: 0;
   z-index: 1000;
 }
 .navarea {
   display: flex;
   justify-content: space-around;
-  margin: auto;
+  margin-right: 5rem;
   width: 70%;
   list-style-type: none;
 }
 .navarea a {
-  color: #f9f9f9;
+  color: #133913;
   text-decoration: none;
+  font-weight: bold;
+  font-size: 16px;
 }
 main {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  margin-top: 5em;
+  margin-top: 8rem;
   margin-left: 3rem;
+}
+
+.mainContent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.logo {
+  margin-top: 3rem;
+  margin-left: 5rem;
+}
+a: hover {
+  color: #263300;
+}
+aside ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+aside a {
+  display: block;
+  color: black;
+  font-size: 16px;
+  padding: 0.5rem;
+}
+
+aside {
+  width: 150%;
+  height: 25%;
+  padding-left: 3rem;
+  margin-left: 0.5rem;
+  margin-top: 20%;
+  float: right;
+  font-weight: 300;
+  background-color: #ffffcc;
+}
+aside h3 {
+  margin-top: 3rem;
+}
+.firstarticle {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  margin-top: 3rem;
+  margin-left: 1rem;
+}
+
+.bilder {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.caption {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 0.5rem;
+}
+h1 {
+  margin-top: 3rem;
+  text-align: center;
+}
+
+.para2 {
+  margin-top: 4rem;
+}
+.secondtitle h2 {
+  font-size: 20px;
+}
+
+@media screen and (max-width: 1199px) {
+  .bilder {
+    min-width: 350px;
+    min-height: 2500px;
+  }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1600px) {
+  .bilder {
+    min-width: 650px;
+    min-height: 500px;
+  }
+}
+footer {
+  width: 60%;
+  margin: auto;
+  font-size: 12px;
+  color: gray;
+}
+footer h3 {
+  font-size: 12px;
+  font-weight: 600;
+  margin: 0;
+}
+footer p {
+  font-size: 1em;
+  margin-left: 0;
+}
+footer ol {
+  padding-left: 1.5em;
+}
+hr {
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+footer a {
+  margin: 0;
+  font-size: 12px;
+}
+.notes li {
+  margin-bottom: 1em;
+}
+.notes a {
+  color: gray;
+}
+
+.ftr {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  list-style-type: none;
+  padding-left: 0;
+  margin-left: 0;
+}
+.ftr ul {
+  list-style-type: none;
+  padding-left: 0;
+  margin-top: 0.6em;
+}
+.ftr li {
+  margin-bottom: 0.3em;
+}
+.ftr a {
+  color: gray;
+  text-decoration: none;
+}
+.copyright {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin-top: 5rem;
 }
