--- a/styles.css
+++ b/styles.css
@@ -63,8 +63,8 @@ aside a {
 }
 
 aside {
-  width: 150%;
-  height: 25%;
+  width: 180%;
+  height: 15%;
   padding-left: 3rem;
   margin-left: 0.5rem;
   margin-top: 20%;
@@ -94,9 +94,11 @@ aside h3 {
   display: flex;
   justify-content: center;
   margin-top: 0.5rem;
+  font-style: italic;
 }
 h1 {
   margin-top: 3rem;
+  margin-bottom: 2rem;
   text-align: center;
 }
 
@@ -107,6 +109,10 @@ h1 {
   font-size: 20px;
 }
 
+p {
+  text-align: justify;
+  margin-top: 1rem;
+}
 @media screen and (max-width: 1199px) {
   .bilder {
     min-width: 350px;
